--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ language: ruby
 rvm:
   - 2.4.1
 
-install:
-  - bundle install --path vendor/bundle
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
+script:
+  - bundle exec rake db:create
+  - bundle exec rake db:migrate
+  - bundle exec rspec
